--- a/src/app/pages/client/history/history.component.html
+++ b/src/app/pages/client/history/history.component.html
@@ -23,7 +23,7 @@
                     {{record.jsonData.name}}
                 </div>
                 <div class="w-40">
-                    {{record.jsonData.credential.join(', ')}}
+                    {{record.jsonData.credential.type.join(', ')}}
                 </div>
                 <div class="w-15">{{record.timestamp | date:'dd-MMM-yyyy HH:mm'}}</div>
                 <div class="w-25">
