--- a/src/app/pages/client/integrations/poap/poap-data/poap-data.component.html
+++ b/src/app/pages/client/integrations/poap/poap-data/poap-data.component.html
@@ -10,7 +10,7 @@
                 </span>
             </div>
             <div class="w-20" (click)="expand(poap)">
-                {{convertUnixTimestamp(poap.created) | date:'dd-MMM-yyyy HH:mm'}}
+                {{poap.created | unixTimestamp | date:'dd-MMM-yyyy HH:mm'}}
             </div>
             <div class="w-60 align-left" (click)="expand(poap)">
                 {{poap.data.name}}
@@ -19,35 +19,11 @@
                 <span class="link-icon">
                     <a [href]="poap.data.home_url" target="_blank"><i class="mdi mdi-open-in-new text-coral"></i></a>
                 </span>
-                <button class="btn-xs" (click)="claimPoap(poap)">Claim</button>
+                <button class="btn-xs" (click)="claimPoap(poap)">Import</button>
             </div>
         </div>
         <div class="poap-expanded" *ngIf="poap.expanded">
-            <div class="poap-property">
-                <div class="w-20">
-                    <img [src]="poap.data.image_url" width="150" />
-                </div>
-                <div class="w-80 align-left">
-                    <p>{{poap.data.description}}</p>
-                    <p>POAP Url: <a [href]="poap.data.home_url" target="_blank">{{poap.data.home_url}}</a></p>
-                    <p>Metadata Source: <a [href]="poap.data.external_url" target="_blank">{{poap.data.external_url}}</a></p>
-                </div>
-            </div>
-            <div class="poap-property">
-                <div class="w-5"></div>
-                <div class="w-15 align-left">Year</div>
-                <div class="w-80 align-left">{{poap.data.year}}</div>
-            </div>
-            <div class="poap-property">
-                <div class="w-5"></div>
-                <div class="w-15 align-left">Tags</div>
-                <div class="w-80 align-left">{{poap.data.tags.join(', ')}}</div>
-            </div>
-            <div class="poap-property" *ngFor="let attr of poap.data.attributes">
-                <div class="w-5"></div>
-                <div class="w-15 align-left">{{attr.trait_type}}</div>
-                <div class="w-80 align-left">{{attr.value}}</div>
-            </div>
+            <app-poap-detail [poap]="this.poap" [provider]="this.provider"></app-poap-detail>
         </div>
     </div>
 </div>
