--- a/src/app/pages/client/integrations/poap/poap-data/poap-data.component.scss
+++ b/src/app/pages/client/integrations/poap/poap-data/poap-data.component.scss
@@ -59,8 +59,8 @@
         .poap-expanded {
             color: $black;
             background: #FAF7F680;
-            padding-top: 25px;
             padding-bottom: 25px;
+            padding-left: 5%;
 
             .poap-property {
                 color: $black;
