--- a/src/app/pages/presentations/presentation-request/presentation-request.component.scss
+++ b/src/app/pages/presentations/presentation-request/presentation-request.component.scss
@@ -99,3 +99,11 @@
 .buttons.vertical {
     flex-direction: column;
 }
+
+.info {
+    background: $blue;
+    padding: 10px;
+    border-radius: 5px;
+    color: $white;
+    text-align: justify;
+}
