--- a/src/app/components/tooltip/tooltip.component.html
+++ b/src/app/components/tooltip/tooltip.component.html
@@ -1,3 +1,3 @@
-<i class="mdi mdi-{{mdiIcon}} tooltip">
+<i class="mdi mdi-{{mdiIcon}} tooltip {{color}}">
     <span class="{{position}}">{{message}}</span>
 </i>
