--- a/src/app/pages/client/integrations/oauth/add/oauth-store/oauth-store.component.scss
+++ b/src/app/pages/client/integrations/oauth/add/oauth-store/oauth-store.component.scss
@@ -31,3 +31,20 @@
     margin-bottom: 20px;
 
 }
+
+
+.custom-label {
+    margin-top: 25px;
+    padding: 50px;
+    border-radius: 15px;
+    text-align: left;
+    box-shadow: 0px 3px 8px rgba(62, 27, 7, 0.1);
+}
+
+.info {
+    background: $blue;
+    color: $light-beige;
+    padding: 5px;
+    border-radius: 5px;
+    display: inline-block;
+}
