--- a/src/app/pages/client/integrations/poap/poap-store/poap-store.component.scss
+++ b/src/app/pages/client/integrations/poap/poap-store/poap-store.component.scss
@@ -1,15 +1,30 @@
 @import '_imports';
 
-.content {
-    margin-bottom: 25px;
-}
+.poap-store {
+    .content {
+        margin-bottom: 25px;
+    }
 
-.buttons {
-    margin-top: 25px;
-    display: flex;
-    gap: 15px;
-    align-items: center;
-    justify-content: center;
+    .poap-details {
+        background: $white;
+        padding: 50px;
+        border-radius: 15px;
+    }
+
+    .buttons {
+        margin-top: 25px;
+        display: flex;
+        gap: 15px;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .poap-label {
+        margin-top: 25px;
+        background: $white;
+        padding: 50px;
+        border-radius: 15px;
+    }
 }
 
 .poap-credentials {
@@ -21,7 +36,8 @@
         overflow: auto;
         background: $light-beige;
         padding: 10px;
-        border-radius: 10px;;
+        border-radius: 10px;
+        ;
 
         p {
             text-align: left;
@@ -29,5 +45,12 @@
     }
 
     margin-bottom: 20px;
+}
 
+.info {
+    background: $blue;
+    color: $light-beige;
+    padding: 5px;
+    border-radius: 5px;
+    display: inline-block;
 }
