--- a/src/app/pages/client/main/main.component.html
+++ b/src/app/pages/client/main/main.component.html
@@ -20,28 +20,33 @@
                     </div>
                     <div class="w-25">
                         <span (click)="showIssuerModal(issuer)" class="issuer-label">
-                            <img src="{{getFaviconUrl(issuer.issuer)}}" width="16" height="16" /> {{issuer.label}} <span *ngIf="!issuerHasDecryptPending(issuer)" class="pill text-success"><i class="mdi mdi-lock-open-check"></i></span>
+                            <img src="{{getFaviconUrl(issuer.issuer)}}" width="16" height="16" /> {{issuer.label}} <span
+                                *ngIf="!issuerHasDecryptPending(issuer)" class="pill text-success"><i
+                                    class="mdi mdi-lock-open-check"></i></span>
                         </span>
                     </div>
                     <div class="w-15">{{issuer.type.join(', ')}}</div>
                     <div class="w-15">{{issuer.issuanceDate | date:'dd-MMM-yyyy HH:mm'}}</div>
                     <div class="w-15">
-                        <span *ngIf="issuer.datevaliduntil">{{issuer.datevaliduntil |
-                            date:'dd-MMM-yyyyHH:mm'}}</span>
+                        <span *ngIf="issuer.datevaliduntil">{{issuer.datevaliduntil | date:'dd-MMM-yyyyHH:mm'}}</span>
                         <span *ngIf="!issuer.datevaliduntil"><i class="mdi mdi-infinity"></i></span>
                     </div>
                     <div class="w-25">
-                        <app-multi-button btnSize="btn-xs" [buttons]="getActionMenuButtons(issuer)" (buttonClick)="issuerActionClick($event, issuer)"></app-multi-button>
+                        <app-multi-button btnSize="btn-xs" [buttons]="getActionMenuButtons(issuer)"
+                            (buttonClick)="issuerActionClick($event, issuer)"></app-multi-button>
                         <!-- <button class="btn-xs" (click)="decryptCredential(issuer)" *ngIf="issuerHasDecryptPending(issuer)">
                             <span *ngIf="!issuer.isDecrypting"><i class="mdi mdi-lock"></i> Decrypt</span>
                             <span *ngIf="issuer.isDecrypting"><i class="mdi mdi-loading rotate-mdi"></i> Waiting for
                                 Metamask</span>
                         </button> -->
-                        <a href="#" class="btn btn-lg" title="Remove Credential"><i class="btn-icon"><i class="mdi mdi-delete"></i></i></a>
+                        <a href="#" (click)="deleteCredentialPrompt(issuer)" class="btn btn-lg" title="Remove Credential"><i
+                                class="btn-icon"><i class="mdi mdi-delete"></i></i></a>
                     </div>
                 </div>
-                <div class="credential-expanded" *ngIf="issuer.expanded && credentialDetailLookup[issuer.wideInternalId]?.credentials">
-                    <div class="credential-property" *ngFor="let cred of credentialDetailLookup[issuer.wideInternalId]?.credentials">
+                <div class="credential-expanded"
+                    *ngIf="issuer.expanded && credentialDetailLookup[issuer.wideInternalId]?.credentials">
+                    <div class="credential-property"
+                        *ngFor="let cred of credentialDetailLookup[issuer.wideInternalId]?.credentials">
                         <div class="w-5"></div>
                         <div class="w-25">{{cred.name}}</div>
                         <div class="w-70" *ngIf="cred.status == 2">
@@ -53,13 +58,14 @@
                                     <app-wide-data-object [data]="cred.decryptedValue"></app-wide-data-object>
                                 </div>
                                 <div *ngIf="valueType === 'other'">
-                                    {{cred.decryptedValue}}    
+                                    {{cred.decryptedValue}}
                                 </div>
                             </ng-container>
                         </div>
                         <div class="w-70" *ngIf="!cred.status || cred.status < 2">
                             <button class="btn-xs" (click)="decryptProperty(cred)">
-                                <span *ngIf="!cred.isDecrypting && (cred.status == 0 || !cred.status)"><i class="mdi mdi-lock"></i>
+                                <span *ngIf="!cred.isDecrypting && (cred.status == 0 || !cred.status)"><i
+                                        class="mdi mdi-lock"></i>
                                     Decrypt</span>
                                 <span *ngIf="cred.isDecrypting && cred.status == 1"><i
                                         class="mdi mdi-loading rotate-mdi"></i> Waiting for Metamask</span>
@@ -68,8 +74,10 @@
                     </div>
                 </div>
             </div>
-            <div *ngIf="!getWeb3WalletService().isCheckingMetaMask() && (!issuedCredentials || issuedCredentials.length <= 0)" class="panel-message info">
-                <p class="info"> <i class="mdi mdi-check-circle-outline"></i>Your wallet is connected, but there are no credentials stored with us yet. Click Add Credentials to get started!</p>
+            <div *ngIf="!getWeb3WalletService().isCheckingMetaMask() && (!issuedCredentials || issuedCredentials.length <= 0)"
+                class="panel-message info">
+                <p class="info"> <i class="mdi mdi-check-circle-outline"></i>Your wallet is connected, but there are no
+                    credentials stored with us yet. Click Add Credentials to get started!</p>
             </div>
         </div>
         <div *ngIf="getWeb3WalletService().isCheckingMetaMask()" class="panel-message info">
@@ -93,7 +101,8 @@
         <div class="scrollable align-left">
             <pre><p>{{issuerDetailsModalData | json}}</p></pre>
         </div>
-        <p class="label">To view the credentials associated to this, please expand the appropriate row in the main screen.</p>
+        <p class="label">To view the credentials associated to this, please expand the appropriate row in the main
+            screen.</p>
     </div>
     <div buttons>
         <button (click)="showIssuerDetailsModal = false">Close</button>
@@ -109,5 +118,15 @@
     </div>
     <div buttons>
         <button (click)="showCredentialPreviewModal = false">Close</button>
+    </div>
+</app-wide-modal>
+<app-wide-modal [showModal]="showConfirmDeleteModal">
+    <div content class="delete-credential" *ngIf="credentialToDelete">
+        <h3>Remove Credential</h3>
+        <p>Are you sure you want to remove {{credentialToDelete.label}}?</p>
+        <div class="buttons" buttons>
+            <button (click)="deleteCredential(credentialToDelete)">Yes</button>
+            <button class="btn-alt" (click)="showConfirmDeleteModal = false; credentialToDelete = null;">Cancel</button>
+        </div>
     </div>
 </app-wide-modal>
