updated text for oauth credential naming

--- a/src/app/pages/client/integrations/oauth/add/oauth-store/oauth-store.component.html
+++ b/src/app/pages/client/integrations/oauth/add/oauth-store/oauth-store.component.html
@@ -4,7 +4,7 @@
         <div class="custom-label">
             <h3>Name your Credential</h3>
             <p class="info"><i class="mdi mdi-alert"></i> This Data will be shared with WIDE. Please DO NOT put in sensitive information!</p>
-            <p>If you would like to identify the POAP more easily, please provide a name for your credential</p>
+            <p>If you would like to identify this credential more easily, please update its name</p>
             <app-wide-input id="textbox" label="Credential Name" name="textbox" [(ngModel)]="data.issuer.label"></app-wide-input>
         </div>
         <div class="buttons">
