--- a/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.scss
+++ b/src/app/pages/presentations/presentation-confirmation/presentation-confirmation.component.scss
@@ -1,7 +1,7 @@
 @import 'imports';
 
 .content {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,12 +39,27 @@
         margin-bottom: 40px;
 
         ul {
+            padding: 0;
             list-style-type: none;
+            width: 100%;
+            display: block;
+
+            li {
+
+                .credential-value-wrapper {
+
+                    .credential-value {
+                        word-break: break-all;
+                        white-space: normal;
+                    }
+                }
+            }
         }
     }
 }
 
-.buttons, .modal-buttons {
+.buttons,
+.modal-buttons {
     display: flex;
     gap: 20px;
     justify-content: center;
@@ -54,7 +69,7 @@
     flex-direction: column;
 }
 
-.processed-credential-details{
+.processed-credential-details {
     max-height: 600px;
 
     .scrollable {
@@ -63,7 +78,8 @@
         overflow: auto;
         background: $light-beige;
         padding: 10px;
-        border-radius: 10px;;
+        border-radius: 10px;
+        ;
 
         p {
             text-align: left;
