--- a/src/app/pages/presentations/presentation-request/presentation-request.component.scss
+++ b/src/app/pages/presentations/presentation-request/presentation-request.component.scss
@@ -1,7 +1,7 @@
 @import 'imports';
 
 .content {
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
