added discord profile (for raidguild) and various minor fixes

--- a/src/app/pages/client/add-credentials/add-credentials.component.html
+++ b/src/app/pages/client/add-credentials/add-credentials.component.html
@@ -3,11 +3,15 @@
     <div class="credential-panel">
         <div class="credential-pane" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'google' }">
             <i class="icon"><img width="44" src='assets/svg/google_icon.svg' alt="Google icon"/></i> 
-            <span>Sign in with Google</span>
+            <span>Google Profile</span>
         </div>
         <div class="credential-pane" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'microsoft' }">
-            <i class="icon"><img width="44" src='assets/svg/Microsoft_logo.svg' alt="Github icon"/></i> 
-            <span>Sign in with Microsoft</span>
+            <i class="icon"><img width="44" src='assets/svg/Microsoft_logo.svg' alt="Microsoft icon"/></i> 
+            <span>Microsoft Profile</span>
+        </div>
+        <div class="credential-pane" [routerLink]="['/credentials/oauth/signin']" [queryParams]="{ type: 'discord' }">
+            <i class="icon"><img width="44" src='assets/icons/providers/discord.svg' alt="Discord icon"/></i> 
+            <span>Discord Profile</span>
         </div>
         <div class="credential-pane" [routerLink]="['/credentials/poap']" [queryParams]="{ type: 'poap' }">
             <i class="icon"><img width="44" src='assets/svg/poap_logo.svg' alt="POAP icon"/></i> 
