applied fixes prior to dungeon master deployment

--- a/src/app/pages/client/add-credentials/add-credentials.component.html
+++ b/src/app/pages/client/add-credentials/add-credentials.component.html
@@ -17,9 +17,9 @@
             <i class="icon"><img width="44" src='assets/svg/poap_logo.svg' alt="POAP icon"/></i> 
             <span>Claim POAPs</span>
         </div>
-        <div class="credential-pane" [routerLink]="['/credentials/raid-guild']" [queryParams]="{ type: 'raidguild-membership' }">
-            <i class="icon"><img height="30" src='assets/svg/raidguild_logo.svg' alt="Raid Guild Logo"/></i> 
-            <span>Raid Guild Membership</span>
+        <div class="credential-pane" [routerLink]="['/credentials/raid-guild']" [queryParams]="{ type: 'daohaus-membership' }">
+            <i class="icon"><img height="60" src='assets/icons/Daohaus_logo.jpg' alt="DAO Haus Logo"/></i> 
+            <span>DAO Haus Membership</span>
         </div>
         <div class="credential-pane disabled">
 
