--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -38,6 +38,14 @@ $error: $coral;
     color: $coral;
 }
 
+.text-peach {
+    color: $peach;
+}
+
+.text-info {
+    color: $blue;
+}
+
 .text-success {
     color: $success;
 }
