--- a/src/app/components/nav-menu/nav-menu-item/nav-menu-item.component.scss
+++ b/src/app/components/nav-menu/nav-menu-item/nav-menu-item.component.scss
@@ -23,6 +23,11 @@ a {
         font-weight: 500;
         margin-right: 20px;
         border-radius: 5px;
+
+        @media (max-width: 1200px) {
+            margin-right: -4px;
+            margin-left: 0;
+        }
     }
 
     i.menu-icon {
@@ -48,6 +53,10 @@ a {
         position: relative;
         bottom: 5px;
         padding-left: 10px;
+
+        @media (max-width: 1200px) {
+            display: none;
+        }
     }
 
     &:hover {
