--- a/src/app/components/nav-menu/nav-menu.component.scss
+++ b/src/app/components/nav-menu/nav-menu.component.scss
@@ -13,6 +13,10 @@
     min-height: 100vh;
     overflow-y: auto;
 
+    @media (max-width: 1200px) {
+        width: 60px; // Adjust the width as needed for smaller screens
+    }
+
     .content {
         padding-top: 70px;
         padding-bottom: 0;
@@ -26,8 +30,16 @@
         flex-direction: column;
         justify-content: flex-end;
 
+        @media (max-width: 1200px) {
+            padding-left: 0; // Adjust the width as needed for smaller screens
+        }
+
         .wide-logo {
             width: 100%;
+
+            @media (max-width: 1200px) {
+                text-align: center;
+            }
 
             img {
                 width: 60%;
