further ui fixes

--- a/src/app/pages/client/about/about.component.html
+++ b/src/app/pages/client/about/about.component.html
@@ -13,3 +13,7 @@
     <li>user presentation of claims to relying parties;</li>
     <li>claim integrity verification.</li>
 </ol>
+<div class="logos">
+    <img src="assets/svg/NGI_Trustchain_logo.svg" alt="NGI Trustchain" />
+    <img src="assets/svg/EU_logo.svg" alt="EU Logo" />
+</div>
