updated menu responsive logo

--- a/src/app/components/nav-menu/nav-menu.component.html
+++ b/src/app/components/nav-menu/nav-menu.component.html
@@ -3,6 +3,9 @@
         <div class="wide-logo">
             <img src="assets/svg/wide_logo_white.svg" />
         </div>
+        <div class="wide-logo small">
+            <img src="assets/svg/W_WIDE.svg" />
+        </div>
         <ul class="items top">
             <li *ngFor="let item of menuItems">
               <app-nav-menu-item [url]="item.url" [text]="item.text" [class]="item.iconClass"></app-nav-menu-item>
